new: some features for user
